--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,8 +5,8 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>ZDemo_MasterDetail</title>
 		<script id="sap-ui-bootstrap"
-			src="resources/sap-ui-core.js"
-			data-sap-ui-theme="sap_bluecrystal"
+			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+			data-sap-ui-theme="sap_fiori_3_dark"
 			data-sap-ui-resourceroots='{"com.demo.ZDemo_MasterDetail": "./"}'
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-preload="async"
